# astroML

./: .gitignore  .mailmap  .travis.yml  CHANGES.rst  CITATION  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  TODO.txt  azure-pipelines.yml  compare_images.py  main.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_addons.py  tox.ini
.github/workflows/: .#ci_tests.yaml  ci_tests.yaml
CIDU_figures/: fig_XD_example.py
astroML/: __init__.py  algorithms.py  conftest.py  correlation.py  cosmology.py  crossmatch.py  decorators.py  filters.py  fourier.py  gmm_bayes.py  lumfunc.py  pdf.py  py3k_compat.py  resample.py  sum_of_norms.py  utils.py  wavelets.py
astroML/PCA/: __init__.py
astroML/classification/: __init__.py  gmm_bayes.py
astroML/clustering/: __init__.py  mst_clustering.py
astroML/datasets/: LIGO_bigdog.py  LINEAR_sample.py  __init__.py  dr7_quasar.py  generated.py  hogg2010test.py  imaging_sample.py  kelly2007test.py  moving_objects.py  nasa_atlas.py  rrlyrae_mags.py  rrlyrae_templates.py  sdss_S82standards.py  sdss_colors.py  sdss_corrected_spectra.py  sdss_filters.py  sdss_galaxy_colors.py  sdss_galaxy_images.py  sdss_specgals.py  sdss_spectrum.py  sdss_sspp.py  spectrum.py  wmap_temperatures.py
astroML/density_estimation/: __init__.py  bayesian_blocks.py  density_estimation.py  empirical.py  gauss_mixture.py  histtools.py  xdeconv.py
astroML/dimensionality/: __init__.py  iterative_pca.py
astroML/linear_model/: TLS.py  (+4 more)
astroML_addons/: __init__.py  periodogram.c  periodogram.pyx  setup.py
astroML_fig_tests/: __init__.py  test.py
book_figures/: FOOTER.rst  README  README.rst  color_plates.txt  contents.txt
doc/: Makefile  RSYNC_SCRIPT.csh  book_figures_index.rst  conf.py  contents.rst  development.rst  index.rst  installation.rst  make.bat
examples/: README.rst  README.txt  plot_placeholder.py
paper_figures/: README.rst  contents.txt
(+391 files in other folders)
