[metadata]
name = astroML
version = 1.0.2
author = Jake VanderPlas
author_email = vanderplas@astro.washington.edu
maintainer = Brigitta Sipocz
maintainer_email = bsipocz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://astroML.github.com
description = Tools for machine learning and data mining in Astronomy
long_description = file: README.rst
keywords = astronomy, astrophysics, cosmology, space, science, modeling, models, fitting, machine-learning
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy

[tool:pytest]
addopts = --doctest-plus
doctest_plus = enabled
doctest_rst = True
testspaths = astroML doc examples
doctest_optionflags = FLOAT_CMP ELLIPSIS NORMALIZE_WHITESPACE
filterwarnings =
    error::DeprecationWarning
    error::FutureWarning
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning

[flake8]
max-line-length = 100
per-file-ignores =
    astroML/datasets/tools/cas_query.py:E223, E221
exclude = __init__.py

[entry_points]

[options]
install_requires =
    scikit-learn>=0.18
    numpy>=1.13
    scipy>=0.18
    matplotlib>=3.0
    astropy>=3.0

tests_require =
    pytest-astropy

packages=find:

[options.extras_require]
test =
    pytest-doctestplus
    pytest-astropy-header
    pytest-remotedata
    pytest-cov

all =
    pymc3>=3.7,<3.11

codestyle =
    flake8

docs =
    sphinx